--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.1",
-    "zod": "^4.1.1"
+    "mongoose": "^8.17.1"
   }
 }
